--- a/build-manifest.json
+++ b/build-manifest.json
@@ -8,15 +8,15 @@
       "bytes": 85,
       "imports": []
     },
-    "_snowpack/pkg/common/index-1db5badd.js": {
-      "bytes": 14925,
+    "_snowpack/pkg/common/index-18a732ab.js": {
+      "bytes": 14939,
       "imports": []
     },
     "_snowpack/pkg/svelte/internal.js": {
-      "bytes": 630,
+      "bytes": 644,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-1db5badd.js",
+          "path": "_snowpack/pkg/common/index-18a732ab.js",
           "kind": "import-statement"
         }
       ]
@@ -25,7 +25,7 @@
       "bytes": 1785,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-1db5badd.js",
+          "path": "_snowpack/pkg/common/index-18a732ab.js",
           "kind": "import-statement"
         }
       ]
@@ -94,7 +94,7 @@
       "bytes": 122,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-1db5badd.js",
+          "path": "_snowpack/pkg/common/index-18a732ab.js",
           "kind": "import-statement"
         }
       ]
@@ -252,8 +252,25 @@
         }
       ]
     },
+    "_snowpack/pkg/@popperjs/core.js": {
+      "bytes": 55972,
+      "imports": []
+    },
+    "dist/components/Commons/TooltipBtn.svelte.js": {
+      "bytes": 3601,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/@popperjs/core.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
     "dist/components/Welcome/Welcome.svelte.js": {
-      "bytes": 2738,
+      "bytes": 2796,
       "imports": [
         {
           "path": "dist/components/Welcome/Welcome.svelte.css",
@@ -270,11 +287,24 @@
         {
           "path": "dist/components/Typewriter/Typewriter.svelte.js",
           "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Commons/TooltipBtn.svelte.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/utils/config.js": {
+      "bytes": 464,
+      "imports": [
+        {
+          "path": "_snowpack/env.js",
+          "kind": "import-statement"
         }
       ]
     },
     "dist/pages/Home.svelte.js": {
-      "bytes": 999,
+      "bytes": 1109,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -283,10 +313,14 @@
         {
           "path": "dist/components/Welcome/Welcome.svelte.js",
           "kind": "import-statement"
+        },
+        {
+          "path": "dist/utils/config.js",
+          "kind": "import-statement"
         }
       ]
     },
-    "dist/components/Results/Results.svelte.css": {
+    "dist/pages/Results.svelte.css": {
       "bytes": 56,
       "imports": []
     },
@@ -417,14 +451,14 @@
       ]
     },
     "dist/api/perfumes.js": {
-      "bytes": 844,
+      "bytes": 681,
       "imports": [
         {
-          "path": "_snowpack/env.js",
+          "path": "dist/utils/HttpClient.js",
           "kind": "import-statement"
         },
         {
-          "path": "dist/utils/HttpClient.js",
+          "path": "dist/utils/config.js",
           "kind": "import-statement"
         }
       ]
@@ -490,7 +524,7 @@
       ]
     },
     "dist/components/Perfumes/Perfume.svelte.js": {
-      "bytes": 5117,
+      "bytes": 5078,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -501,13 +535,17 @@
           "kind": "import-statement"
         },
         {
+          "path": "dist/components/Commons/TooltipBtn.svelte.js",
+          "kind": "import-statement"
+        },
+        {
           "path": "dist/components/Image/Image.svelte.js",
           "kind": "import-statement"
         }
       ]
     },
     "dist/components/Perfumes/Perfumes.svelte.js": {
-      "bytes": 2652,
+      "bytes": 2661,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -519,11 +557,11 @@
         }
       ]
     },
-    "dist/components/Results/Results.svelte.js": {
-      "bytes": 6506,
+    "dist/pages/Results.svelte.js": {
+      "bytes": 6368,
       "imports": [
         {
-          "path": "dist/components/Results/Results.svelte.css",
+          "path": "dist/pages/Results.svelte.css",
           "kind": "import-statement"
         },
         {
@@ -556,23 +594,6 @@
         }
       ]
     },
-    "dist/pages/Results.svelte.js": {
-      "bytes": 999,
-      "imports": [
-        {
-          "path": "_snowpack/pkg/svelte/internal.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/components/Results/Results.svelte.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
-    "_snowpack/pkg/@okrad/svelte-progressbar.js": {
-      "bytes": 35804,
-      "imports": []
-    },
     "dist/components/Quiz/Quiz.svelte.css": {
       "bytes": 56,
       "imports": []
@@ -595,22 +616,14 @@
       ]
     },
     "dist/pages/Quizzes.svelte.js": {
-      "bytes": 3183,
+      "bytes": 3544,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
           "kind": "import-statement"
         },
         {
-          "path": "_snowpack/pkg/@okrad/svelte-progressbar.js",
-          "kind": "import-statement"
-        },
-        {
           "path": "dist/components/Quiz/Quiz.svelte.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/stores/index.js",
           "kind": "import-statement"
         },
         {
@@ -641,7 +654,7 @@
       ]
     },
     "dist/styles/TailwindStyles.svelte.css": {
-      "bytes": 5741,
+      "bytes": 8112,
       "imports": []
     },
     "dist/styles/TailwindStyles.svelte.js": {
@@ -736,13 +749,13 @@
           "bytesInOutput": 324
         },
         "_snowpack/env.js": {
-          "bytesInOutput": 98
+          "bytesInOutput": 100
         },
         "dist/components/App/App.svelte.css": {
           "bytesInOutput": 0
         },
-        "_snowpack/pkg/common/index-1db5badd.js": {
-          "bytesInOutput": 5083
+        "_snowpack/pkg/common/index-18a732ab.js": {
+          "bytesInOutput": 5077
         },
         "_snowpack/pkg/svelte/internal.js": {
           "bytesInOutput": 0
@@ -810,10 +823,13 @@
         "dist/components/Welcome/Welcome.svelte.js": {
           "bytesInOutput": 993
         },
-        "dist/pages/Home.svelte.js": {
-          "bytesInOutput": 248
+        "dist/utils/config.js": {
+          "bytesInOutput": 134
         },
-        "dist/components/Results/Results.svelte.css": {
+        "dist/pages/Home.svelte.js": {
+          "bytesInOutput": 287
+        },
+        "dist/pages/Results.svelte.css": {
           "bytesInOutput": 0
         },
         "_snowpack/pkg/@beyonk/async-script-loader.js": {
@@ -823,7 +839,7 @@
           "bytesInOutput": 13
         },
         "dist/utils/GoogleAnalytics/GoogleAnalytics.svelte.js": {
-          "bytesInOutput": 571
+          "bytesInOutput": 572
         },
         "dist/utils/index.js": {
           "bytesInOutput": 0
@@ -853,7 +869,7 @@
           "bytesInOutput": 315
         },
         "dist/api/perfumes.js": {
-          "bytesInOutput": 340
+          "bytesInOutput": 270
         },
         "dist/components/Title/Title.svelte.js": {
           "bytesInOutput": 670
@@ -874,19 +890,13 @@
           "bytesInOutput": 602
         },
         "dist/components/Perfumes/Perfume.svelte.js": {
-          "bytesInOutput": 1545
+          "bytesInOutput": 1498
         },
         "dist/components/Perfumes/Perfumes.svelte.js": {
-          "bytesInOutput": 844
-        },
-        "dist/components/Results/Results.svelte.js": {
-          "bytesInOutput": 2212
+          "bytesInOutput": 853
         },
         "dist/pages/Results.svelte.js": {
-          "bytesInOutput": 248
-        },
-        "_snowpack/pkg/@okrad/svelte-progressbar.js": {
-          "bytesInOutput": 104
+          "bytesInOutput": 2094
         },
         "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 0
@@ -895,7 +905,7 @@
           "bytesInOutput": 1733
         },
         "dist/pages/Quizzes.svelte.js": {
-          "bytesInOutput": 897
+          "bytesInOutput": 1204
         },
         "dist/components/Image/RoundedImage.svelte.css": {
           "bytesInOutput": 0
@@ -910,10 +920,10 @@
           "bytesInOutput": 2212
         },
         "dist/index.js": {
-          "bytesInOutput": 138
+          "bytesInOutput": 139
         }
       },
-      "bytes": 73012
+      "bytes": 72912
     },
     "../~~bundle~~/dist/index.css": {
       "imports": [],
@@ -924,13 +934,13 @@
         "dist/components/Image/RoundedImage.svelte.css": {
           "bytesInOutput": 100
         },
-        "dist/styles/TailwindStyles.svelte.css": {
-          "bytesInOutput": 5569
-        },
-        "dist/components/Quiz/Quiz.svelte.css": {
+        "dist/pages/Results.svelte.css": {
           "bytesInOutput": 56
         },
-        "dist/components/Results/Results.svelte.css": {
+        "dist/styles/TailwindStyles.svelte.css": {
+          "bytesInOutput": 7903
+        },
+        "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 56
         },
         "dist/components/Welcome/Welcome.svelte.css": {
@@ -946,7 +956,7 @@
           "bytesInOutput": 42
         }
       },
-      "bytes": 6593
+      "bytes": 8927
     }
   }
 }
