env: fix logic for calling config file
- not use ci because can't use env file in production.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - release
 
 jobs:
   build-deploy:
@@ -11,13 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Dotenv Action
+        uses: falti/dotenv-action@v0.2.5
+        with:
+          path: /.env
+
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
 
       - run: yarn
-
+      
       - run: yarn build
 
       - name: Deploy
