--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "svelte_snowpack_ts_tw_boilerplate",
-	"homepage": "https://github.com/rayleighko/svelte_snowpack_ts_tw_boilerplate",
-	"description": "svelte_snowpack_ts_tw_boilerplate",
+	"name": "perpick.github.io",
+	"homepage": "http://perpick.github.io",
+	"description": "perpick.github.io",
 	"version": "0.1.0",
 	"license": "MIT",
 	"author": {
@@ -20,6 +20,7 @@
 	"scripts": {
 		"start": "snowpack dev",
 		"build": "snowpack build",
+		"deploy": "gh-pages -d dist",
 		"test": "jest",
 		"lint": "eslint"
 	},
@@ -45,6 +46,7 @@
 		"enzyme": "^3.11.0",
 		"eslint": "^7.19.0",
 		"eslint-plugin-svelte3": "^3.0.0",
+		"gh-pages": "^3.1.0",
 		"husky": "^5.0.9",
 		"jest": "^26.6.3",
 		"prettier": "^2.2.1",
