--- a/build-manifest.json
+++ b/build-manifest.json
@@ -1,22 +1,22 @@
 {
   "inputs": {
     "_snowpack/env.js": {
-      "bytes": 97,
+      "bytes": 384,
       "imports": []
     },
     "dist/components/App/App.svelte.css": {
       "bytes": 85,
       "imports": []
     },
-    "_snowpack/pkg/common/index-18a732ab.js": {
-      "bytes": 14939,
+    "_snowpack/pkg/common/index-fb1be853.js": {
+      "bytes": 25684,
       "imports": []
     },
     "_snowpack/pkg/svelte/internal.js": {
-      "bytes": 644,
+      "bytes": 769,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-18a732ab.js",
+          "path": "_snowpack/pkg/common/index-fb1be853.js",
           "kind": "import-statement"
         }
       ]
@@ -25,13 +25,13 @@
       "bytes": 1785,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-18a732ab.js",
+          "path": "_snowpack/pkg/common/index-fb1be853.js",
           "kind": "import-statement"
         }
       ]
     },
     "dist/stores/users.js": {
-      "bytes": 160,
+      "bytes": 127,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/store.js",
@@ -91,10 +91,10 @@
       "imports": []
     },
     "_snowpack/pkg/svelte.js": {
-      "bytes": 122,
+      "bytes": 251,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-18a732ab.js",
+          "path": "_snowpack/pkg/common/index-fb1be853.js",
           "kind": "import-statement"
         }
       ]
@@ -252,25 +252,8 @@
         }
       ]
     },
-    "_snowpack/pkg/@popperjs/core.js": {
-      "bytes": 55972,
-      "imports": []
-    },
-    "dist/components/Commons/TooltipBtn.svelte.js": {
-      "bytes": 3601,
-      "imports": [
-        {
-          "path": "_snowpack/pkg/svelte/internal.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "_snowpack/pkg/@popperjs/core.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
     "dist/components/Welcome/Welcome.svelte.js": {
-      "bytes": 2796,
+      "bytes": 2740,
       "imports": [
         {
           "path": "dist/components/Welcome/Welcome.svelte.css",
@@ -287,35 +270,22 @@
         {
           "path": "dist/components/Typewriter/Typewriter.svelte.js",
           "kind": "import-statement"
-        },
-        {
-          "path": "dist/components/Commons/TooltipBtn.svelte.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
-    "dist/config.js": {
-      "bytes": 461,
-      "imports": [
-        {
-          "path": "_snowpack/env.js",
-          "kind": "import-statement"
         }
       ]
     },
     "dist/pages/Home.svelte.js": {
-      "bytes": 1103,
+      "bytes": 1491,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
           "kind": "import-statement"
         },
         {
-          "path": "dist/components/Welcome/Welcome.svelte.js",
+          "path": "dist/stores/index.js",
           "kind": "import-statement"
         },
         {
-          "path": "dist/config.js",
+          "path": "dist/components/Welcome/Welcome.svelte.js",
           "kind": "import-statement"
         }
       ]
@@ -387,15 +357,40 @@
         }
       ]
     },
+    "dist/config/env/development.json.proxy.js": {
+      "bytes": 171,
+      "imports": []
+    },
+    "dist/config/env/prodiction.json.proxy.js": {
+      "bytes": 171,
+      "imports": []
+    },
+    "dist/config/config.js": {
+      "bytes": 361,
+      "imports": [
+        {
+          "path": "_snowpack/env.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/config/env/development.json.proxy.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/config/env/prodiction.json.proxy.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
     "dist/api/perfumes.js": {
-      "bytes": 675,
+      "bytes": 685,
       "imports": [
         {
           "path": "dist/utils/HttpClient.js",
           "kind": "import-statement"
         },
         {
-          "path": "dist/config.js",
+          "path": "dist/config/config.js",
           "kind": "import-statement"
         }
       ]
@@ -439,6 +434,70 @@
         }
       ]
     },
+    "dist/components/Commons/Modal/PopupLong.svelte.js": {
+      "bytes": 2182,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/components/Commons/Modal/Content.svelte.js": {
+      "bytes": 2116,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Commons/Modal/PopupLong.svelte.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/components/Commons/Modal/Modal.svelte.css": {
+      "bytes": 1750,
+      "imports": []
+    },
+    "_snowpack/pkg/svelte/transition.js": {
+      "bytes": 313,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/common/index-fb1be853.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/components/Commons/Modal/Modal.svelte.js": {
+      "bytes": 20011,
+      "imports": [
+        {
+          "path": "dist/components/Commons/Modal/Modal.svelte.css",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte/transition.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
     "dist/components/Image/Image.svelte.css": {
       "bytes": 100,
       "imports": []
@@ -461,7 +520,7 @@
       ]
     },
     "dist/components/Perfumes/Perfume.svelte.js": {
-      "bytes": 5078,
+      "bytes": 5861,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -472,7 +531,11 @@
           "kind": "import-statement"
         },
         {
-          "path": "dist/components/Commons/TooltipBtn.svelte.js",
+          "path": "dist/components/Commons/Modal/Content.svelte.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Commons/Modal/Modal.svelte.js",
           "kind": "import-statement"
         },
         {
@@ -495,7 +558,7 @@
       ]
     },
     "dist/pages/Results.svelte.js": {
-      "bytes": 6368,
+      "bytes": 6370,
       "imports": [
         {
           "path": "dist/pages/Results.svelte.css",
@@ -553,7 +616,7 @@
       ]
     },
     "dist/pages/Quizzes.svelte.js": {
-      "bytes": 3544,
+      "bytes": 5421,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -561,6 +624,10 @@
         },
         {
           "path": "dist/components/Quiz/Quiz.svelte.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/stores/index.js",
           "kind": "import-statement"
         },
         {
@@ -591,7 +658,7 @@
       ]
     },
     "dist/styles/TailwindStyles.svelte.css": {
-      "bytes": 8112,
+      "bytes": 8760,
       "imports": []
     },
     "dist/styles/TailwindStyles.svelte.js": {
@@ -608,7 +675,7 @@
       ]
     },
     "dist/components/App/App.svelte.js": {
-      "bytes": 7175,
+      "bytes": 7479,
       "imports": [
         {
           "path": "dist/components/App/App.svelte.css",
@@ -682,13 +749,13 @@
           "bytesInOutput": 324
         },
         "_snowpack/env.js": {
-          "bytesInOutput": 100
+          "bytesInOutput": 357
         },
         "dist/components/App/App.svelte.css": {
           "bytesInOutput": 0
         },
-        "_snowpack/pkg/common/index-18a732ab.js": {
-          "bytesInOutput": 5069
+        "_snowpack/pkg/common/index-fb1be853.js": {
+          "bytesInOutput": 7728
         },
         "_snowpack/pkg/svelte/internal.js": {
           "bytesInOutput": 0
@@ -697,7 +764,7 @@
           "bytesInOutput": 427
         },
         "dist/stores/users.js": {
-          "bytesInOutput": 55
+          "bytesInOutput": 30
         },
         "dist/stores/index.js": {
           "bytesInOutput": 0
@@ -709,7 +776,7 @@
           "bytesInOutput": 50
         },
         "dist/stores/nav.js": {
-          "bytesInOutput": 33
+          "bytesInOutput": 34
         },
         "dist/components/Welcome/Welcome.svelte.css": {
           "bytesInOutput": 0
@@ -742,7 +809,7 @@
           "bytesInOutput": 241
         },
         "dist/components/Typewriter/helpers/getRandomElement.js": {
-          "bytesInOutput": 179
+          "bytesInOutput": 189
         },
         "dist/components/Typewriter/helpers/onAnimationEnd.js": {
           "bytesInOutput": 189
@@ -754,19 +821,16 @@
           "bytesInOutput": 1582
         },
         "dist/components/Welcome/Welcome.svelte.js": {
-          "bytesInOutput": 993
-        },
-        "dist/config.js": {
-          "bytesInOutput": 134
+          "bytesInOutput": 996
         },
         "dist/pages/Home.svelte.js": {
-          "bytesInOutput": 287
+          "bytesInOutput": 361
         },
         "dist/pages/Results.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/utils/PerfumeCalc/PerfumeCalc.js": {
-          "bytesInOutput": 342
+          "bytesInOutput": 344
         },
         "dist/constants/mbtis.json.proxy.js": {
           "bytesInOutput": 22394
@@ -784,13 +848,22 @@
           "bytesInOutput": 0
         },
         "_snowpack/pkg/axios.js": {
-          "bytesInOutput": 14883
+          "bytesInOutput": 14931
         },
         "dist/utils/HttpClient.js": {
-          "bytesInOutput": 315
+          "bytesInOutput": 311
+        },
+        "dist/config/env/development.json.proxy.js": {
+          "bytesInOutput": 142
+        },
+        "dist/config/env/prodiction.json.proxy.js": {
+          "bytesInOutput": 142
+        },
+        "dist/config/config.js": {
+          "bytesInOutput": 81
         },
         "dist/api/perfumes.js": {
-          "bytesInOutput": 270
+          "bytesInOutput": 273
         },
         "dist/components/Title/Title.svelte.js": {
           "bytesInOutput": 670
@@ -802,49 +875,64 @@
           "bytesInOutput": 0
         },
         "dist/components/Image/IntersectionObserver.svelte.js": {
-          "bytesInOutput": 1336
+          "bytesInOutput": 1335
+        },
+        "dist/components/Commons/Modal/PopupLong.svelte.js": {
+          "bytesInOutput": 841
+        },
+        "dist/components/Commons/Modal/Content.svelte.js": {
+          "bytesInOutput": 819
+        },
+        "dist/components/Commons/Modal/Modal.svelte.css": {
+          "bytesInOutput": 0
+        },
+        "_snowpack/pkg/svelte/transition.js": {
+          "bytesInOutput": 153
+        },
+        "dist/components/Commons/Modal/Modal.svelte.js": {
+          "bytesInOutput": 6682
         },
         "dist/components/Image/Image.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Image/Image.svelte.js": {
-          "bytesInOutput": 602
+          "bytesInOutput": 603
         },
         "dist/components/Perfumes/Perfume.svelte.js": {
-          "bytesInOutput": 1498
+          "bytesInOutput": 1813
         },
         "dist/components/Perfumes/Perfumes.svelte.js": {
           "bytesInOutput": 853
         },
         "dist/pages/Results.svelte.js": {
-          "bytesInOutput": 2095
+          "bytesInOutput": 2086
         },
         "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Quiz/Quiz.svelte.js": {
-          "bytesInOutput": 1733
+          "bytesInOutput": 1734
         },
         "dist/pages/Quizzes.svelte.js": {
-          "bytesInOutput": 1204
+          "bytesInOutput": 2022
         },
         "dist/components/Image/RoundedImage.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Image/RoundedImage.svelte.js": {
-          "bytesInOutput": 610
+          "bytesInOutput": 611
         },
         "dist/styles/TailwindStyles.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/App/App.svelte.js": {
-          "bytesInOutput": 2101
+          "bytesInOutput": 2173
         },
         "dist/index.js": {
           "bytesInOutput": 139
         }
       },
-      "bytes": 70940
+      "bytes": 83892
     },
     "../~~bundle~~/dist/index.css": {
       "imports": [],
@@ -859,7 +947,7 @@
           "bytesInOutput": 56
         },
         "dist/styles/TailwindStyles.svelte.css": {
-          "bytesInOutput": 7903
+          "bytesInOutput": 8538
         },
         "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 56
@@ -870,6 +958,9 @@
         "dist/components/Typewriter/Typewriter.svelte.css": {
           "bytesInOutput": 548
         },
+        "dist/components/Commons/Modal/Modal.svelte.css": {
+          "bytesInOutput": 1671
+        },
         "dist/components/Image/Image.svelte.css": {
           "bytesInOutput": 100
         },
@@ -877,7 +968,7 @@
           "bytesInOutput": 42
         }
       },
-      "bytes": 8927
+      "bytes": 11233
     }
   }
 }
