--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@tsconfig/svelte": "^1.0.10",
 		"@types/chai": "^4.2.15",
 		"@types/jest": "^26.0.20",
+		"@types/lodash": "^4.14.168",
 		"@types/snowpack-env": "^2.3.3",
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
@@ -49,6 +50,7 @@
 		"gh-pages": "^3.1.0",
 		"husky": "^5.0.9",
 		"jest": "^26.6.3",
+		"lodash": "^4.17.20",
 		"prettier": "^2.2.1",
 		"prettier-plugin-svelte": "^2.1.4",
 		"snowpack": "^3.0.11",
